<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_sort_by_time_asc"
        android:orderInCategory="100"
        android:title="@string/sort_by_time_asc"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_sort_by_time_desc"
        android:orderInCategory="101"
        android:title="@string/sort_by_time_desc"
        app:showAsAction="never"
        />
    <item
        android:visible="false"
        android:id="@+id/action_sort_by_range_asc"
        android:orderInCategory="102"
        android:title="@string/sort_by_range_asc"
        app:showAsAction="never"
        />
    <item
        android:visible="false"
        android:id="@+id/action_sort_by_range_desc"
        android:orderInCategory="103"
        android:title="@string/sort_by_range_desc"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_sort_by_title_asc"
        android:orderInCategory="104"
        android:title="@string/sort_by_title_asc"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_sort_by_title_desc"
        android:orderInCategory="105"
        android:title="@string/sort_by_title_desc"
        app:showAsAction="never"
        />
</menu>
