<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/margin_tiny"
    android:layout_marginBottom="@dimen/margin_tiny"
    android:layout_marginStart="@dimen/margin_small"
    android:layout_marginEnd="@dimen/margin_small"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/card_memo_background"
        android:padding="@dimen/margin_small"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/card_memo_title"
            android:text="@string/item_title"
            android:textSize="30sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/card_memo_location"
            android:text="@string/item_location"
            android:layout_below="@id/card_memo_title"
            android:layout_alignParentStart="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/card_memo_time"
            android:text="@string/item_timestamp"
            android:layout_alignParentEnd="true"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--<TextView-->
            <!--android:visibility="invisible"-->
            <!--android:id="@+id/card_memo_distance"-->
            <!--android:text="@string/item_distance"-->
            <!--android:layout_alignParentBottom="true"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"/>-->

    </LinearLayout>

</androidx.cardview.widget.CardView>