<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.iptime.twd.mymemoalamapplication.edit.memo.EditMemoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- 지도 -->
            <fragment
                android:id="@+id/edit_memo_map"
                android:name="com.google.android.gms.maps.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>

            <!-- 제목 입력 -->
            <androidx.cardview.widget.CardView
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_tiny"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edit_memo_title"
                        android:hint="@string/edit_memo_title"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:imeOptions="actionNext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>

            <!-- 장소 선택 버튼 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/edit_memo_place_bt"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_tiny"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src="@drawable/ic_action_search_black"
                            android:layout_margin="@dimen/margin_medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:id="@+id/place_title"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/default_place_title"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"/>

                        <ImageView
                            android:layout_margin="@dimen/margin_medium"
                            android:src="@drawable/ic_action_right"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <!-- 장소 선택 후 장소정보 출력 -->
                    <TextView
                        android:id="@+id/place_details"
                        android:autoLink="all"
                        android:text="@string/default_place_details"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginBottom="@dimen/margin_tiny"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="@dimen/margin_tiny"
                android:layout_marginBottom="@dimen/margin_tiny"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include layout="@layout/edit_view_direction_range"/>

            </androidx.cardview.widget.CardView>

            <!-- 세부 내용 입력 -->
            <androidx.cardview.widget.CardView
                android:layout_marginTop="@dimen/margin_tiny"
                android:layout_marginBottom="@dimen/margin_tiny"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edit_memo_contents"
                        android:hint="@string/edit_memo_contents"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
